--- a/git.css
+++ b/git.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgb(211, 181, 239) !important;
+    background: linear-gradient(100deg, #bf3989, #aa0ea2da);
     font-family:Verdana;
 }
 
