changes git.css - index.html

--- a/git.css
+++ b/git.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(100deg, #6937FF, #0B92FF);
+    background-color: #0d1117;
     font-family: Verdana, sans-serif;
     color: #fff; /* Couleur de texte blanche */
 }
@@ -11,31 +11,44 @@ body {
 
 h2 {
     text-align: center;
-    color: #6937FF; /* Couleur du titre */
+    color: #000000; /* Couleur du titre */
+}
+
+.carousel-container {
+    color: #0d1117; /* Couleur de fond du carrousel */
+    background-color: #262f3d; /* Couleur du texte */
+
+}
+
+.carousel-caption h1,
+.carousel-caption p,
+.carousel-caption a {
+    color: #ffffff; /* Couleur du texte dans la légende, les paragraphes et les liens */
 }
 
 .commands_container {
     width: 60%; /* Augmentation de la largeur du conteneur */
     margin: 20px auto; /* Augmentation de la marge supérieure */
-    border: 3px solid #6937FF; /* Couleur de bordure violette */
+    border: 3px solid #000000; /* Couleur de bordure violette */
     border-radius: 10px; /* Coins arrondis */
     padding: 20px; /* Augmentation de l'espacement intérieur */
+    
 }
 
 .search {
     border-color: transparent; /* Suppression de la bordure */
     color: #fff;
-    background-color: #6937FF; /* Couleur de fond violette */
+    background-color: #000000; /* Couleur de fond violette */
 }
 
 .search:hover {
-    background-color: #2F0086; /* Couleur de fond violette plus foncée au survol */
+    background-color: #000000; /* Couleur de fond violette plus foncée au survol */
 }
 
 .section_title {
     text-align: center;
     font-weight: bold;
-    color: #6937FF; /* Couleur du titre */
+    color: #000000; /* Couleur du titre */
 }
 
 li {
@@ -45,12 +58,12 @@ li {
 
 label {
     font-size: 16px; /* Taille de police légèrement augmentée */
-    color: #6937FF; /* Couleur du texte */
+    color: #000000; /* Couleur du texte */
 }
 
 a {
     text-decoration: none;
-    color: #6937FF; /* Couleur des liens */
+    color: #ffffff; /* Couleur des liens */
 }
 
 .command-buttons {
@@ -61,7 +74,7 @@ a {
 
 hr {
     height: 3px; /* Hauteur de la ligne de séparation réduite */
-    background-color: #6937FF; /* Couleur de ligne violette */
+    background-color: #ffffff; /* Couleur de ligne violette */
     border: none; /* Suppression de la bordure */
 }
 
@@ -74,18 +87,18 @@ footer {
     padding-top: 20px; /* Augmentation de la marge supérieure */
     width: 60%;
     margin: 20px auto; /* Marge centrée */
-    border: 3px solid #6937FF; /* Couleur de bordure violette */
+    border: 3px solid #ffffff; /* Couleur de bordure violette */
     border-radius: 10px; /* Coins arrondis */
     font-weight: lighter;
     text-align: center;
-    color: #6937FF; /* Couleur du texte */
+    color: #ffffff; /* Couleur du texte */
 }
 
 .in-text-link {
     text-decoration: none;
-    color: #6937FF; /* Couleur des liens */
+    color: #000000; /* Couleur des liens */
 }
 
 .in-text-link:hover {
-    color: #2F0086; /* Couleur des liens plus foncée au survol */
+    color: #000000; /* Couleur des liens plus foncée au survol */
 }
